<resources>
    <string name="app_name">Chore Master</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="already_have_acc">Already have an account? </string>
    <string name="click_to_register">Click to register</string>
    <string name="dont_have_acc">Don\'t have an account? </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="set_your_username">Set your username</string>
    <string name="bio">Bio (Can be empty)</string>
    <string name="create_group">Create group</string>
    <string name="group_name">Group name</string>
    <string name="description">Description (Can be empty)</string>
</resources>